err.log
cc1: warning: command line option ‘-std=c++11’ is valid for C++/ObjC++ but not for C
In file included from ./include/global.h:5:0,
                 from ./include/base.h:40,
                 from ./src/device.c:1:
./include/device.h:86:1: warning: useless storage class specifier in empty declaration
 };
 ^
./src/device.c: In function ‘partition_parent’:
./src/device.c:62:8: warning: implicit declaration of function ‘asprintf’ [-Wimplicit-function-declaration]
    if (asprintf (&path, "/sys/dev/block/%ju:%ju/../dev",
        ^
./src/device.c:65:5: warning: implicit declaration of function ‘error’ [-Wimplicit-function-declaration]
     error (EXIT_FAILURE, errno, "asprintf");
     ^
./src/device.c: In function ‘device_contains’:
./src/device.c:101:7: warning: implicit declaration of function ‘stat’ [-Wimplicit-function-declaration]
   if (stat (dev_name, &statbuf) == -1) 
       ^
./src/device.c: In function ‘dhcp_request’:
./src/device.c:124:5: warning: implicit declaration of function ‘exec_cmd’ [-Wimplicit-function-declaration]
     exec_cmd(cmd, result);
     ^
./src/device.c:125:5: warning: implicit declaration of function ‘find_all_netcards’ [-Wimplicit-function-declaration]
     find_all_netcards();
     ^
./src/device.c:126:5: warning: implicit declaration of function ‘send_config_pipe’ [-Wimplicit-function-declaration]
     send_config_pipe();
     ^
./src/device.c: In function ‘find_all_disks’:
./src/device.c:171:11: warning: pointer targets in passing argument 1 of ‘strcpy’ differ in signedness [-Wpointer-sign]
    strcpy(dev_info.disks[dev_info.disk_count].name, d->d_name); 
           ^
In file included from /usr/include/memory.h:29:0,
                 from ./include/base.h:14,
                 from ./src/device.c:1:
/usr/include/string.h:125:14: note: expected ‘char * restrict’ but argument is of type ‘unsigned char *’
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^
./src/device.c:179:10: warning: implicit declaration of function ‘linux_new’ [-Wimplicit-function-declaration]
    dev = linux_new(buf);
          ^
./src/device.c:179:8: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
    dev = linux_new(buf);
        ^
./src/device.c:192:16: error: ‘cmd’ undeclared (first use in this function)
        sprintf(cmd, install_sh, "sda", dev_info.usb_disk->name, device_partition(dev_info.usb_disk->name));
                ^
./src/device.c:192:16: note: each undeclared identifier is reported only once for each function it appears in
./src/device.c:192:82: warning: pointer targets in passing argument 1 of ‘device_partition’ differ in signedness [-Wpointer-sign]
        sprintf(cmd, install_sh, "sda", dev_info.usb_disk->name, device_partition(dev_info.usb_disk->name));
                                                                                  ^
./src/device.c:19:5: note: expected ‘const char *’ but argument is of type ‘unsigned char *’
 int device_partition (const char *dev)
     ^
./src/device.c:202:8: warning: implicit declaration of function ‘check_qcow2’ [-Wimplicit-function-declaration]
     if(check_qcow2(dev) == SUCCESS)
        ^
./src/device.c:135:23: warning: unused variable ‘nr_removable’ [-Wunused-variable]
  size_t nr_disks = 0, nr_removable = 0;
                       ^
./src/device.c:135:9: warning: unused variable ‘nr_disks’ [-Wunused-variable]
  size_t nr_disks = 0, nr_removable = 0;
         ^
./src/device.c: At top level:
./src/device.c:229:6: warning: conflicting types for ‘find_all_netcards’
 void find_all_netcards()
      ^
./src/device.c:125:5: note: previous implicit declaration of ‘find_all_netcards’ was here
     find_all_netcards();
     ^
./src/device.c: In function ‘find_all_netcards’:
./src/device.c:238:11: warning: implicit declaration of function ‘get_netcard_info’ [-Wimplicit-function-declaration]
     ret = get_netcard_info(&dev_info.net);
           ^
./src/device.c:264:4: warning: implicit declaration of function ‘strupr’ [-Wimplicit-function-declaration]
    strupr(dev_info.net[i].mac); 
    ^
./src/device.c:233:10: warning: unused variable ‘buf’ [-Wunused-variable]
     char buf[MAX_BUFLEN] = {0};
          ^
./src/device.c: In function ‘init_device’:
./src/device.c:336:3: warning: implicit declaration of function ‘init_qcow2’ [-Wimplicit-function-declaration]
   init_qcow2(dev_info.mini_disk->dev, dev_info.mini_disk->disk_ready); 
   ^
./src/device.c:338:25: warning: implicit declaration of function ‘available_space’ [-Wimplicit-function-declaration]
   terminal->disk_size = available_space(dev_info.mini_disk->dev->disk_name);
                         ^
./src/device.c:344:5: warning: implicit declaration of function ‘umount_boot’ [-Wimplicit-function-declaration]
     umount_boot();
     ^
./src/device.c:347:7: warning: implicit declaration of function ‘mount_boot’ [-Wimplicit-function-declaration]
    if(mount_boot() == SUCCESS)
       ^
./src/device.c:353:3: warning: implicit declaration of function ‘print_qcow2’ [-Wimplicit-function-declaration]
   print_qcow2(dev_info.mini_disk->dev);
   ^
./src/device.c:356:3: warning: implicit declaration of function ‘send_error_msg’ [-Wimplicit-function-declaration]
   send_error_msg(DISK_NO_FOUND_ERR);
   ^
./src/device.c: In function ‘mount_boot’:
./src/device.c:8:33: warning: pointer targets in passing argument 1 of ‘strncmp’ differ in signedness [-Wpointer-sign]
 #define STRPREFIX(a,b) (strncmp((a),(b),strlen((b))) == 0)
                                 ^
./src/device.c:367:5: note: in expansion of macro ‘STRPREFIX’
  if(STRPREFIX(dev_info.mini_disk->name, "mmcblk1") || STRPREFIX(dev_info.mini_disk->name, "nvme0n1"))
     ^
In file included from /usr/include/memory.h:29:0,
                 from ./include/base.h:14,
                 from ./src/device.c:1:
/usr/include/string.h:143:12: note: expected ‘const char *’ but argument is of type ‘unsigned char *’
 extern int strncmp (const char *__s1, const char *__s2, size_t __n)
            ^
./src/device.c:8:33: warning: pointer targets in passing argument 1 of ‘strncmp’ differ in signedness [-Wpointer-sign]
 #define STRPREFIX(a,b) (strncmp((a),(b),strlen((b))) == 0)
                                 ^
./src/device.c:367:55: note: in expansion of macro ‘STRPREFIX’
  if(STRPREFIX(dev_info.mini_disk->name, "mmcblk1") || STRPREFIX(dev_info.mini_disk->name, "nvme0n1"))
                                                       ^
In file included from /usr/include/memory.h:29:0,
                 from ./include/base.h:14,
                 from ./src/device.c:1:
/usr/include/string.h:143:12: note: expected ‘const char *’ but argument is of type ‘unsigned char *’
 extern int strncmp (const char *__s1, const char *__s2, size_t __n)
            ^
./src/device.c: In function ‘upgrad_programe’:
./src/device.c:506:25: warning: pointer targets in passing argument 2 of ‘strcpy’ differ in signedness [-Wpointer-sign]
  strcpy(task.server_ip, server->ip);
                         ^
In file included from /usr/include/memory.h:29:0,
                 from ./include/base.h:14,
                 from ./src/device.c:1:
/usr/include/string.h:125:14: note: expected ‘const char * restrict’ but argument is of type ‘unsigned char *’
 extern char *strcpy (char *__restrict __dest, const char *__restrict __src)
              ^
./src/device.c:521:24: warning: pointer targets in passing argument 2 of ‘en_queue’ differ in signedness [-Wpointer-sign]
  en_queue(&task_queue, (char *)&task, sizeof(struct tftp_task) , TASK_TFTP);
                        ^
In file included from ./include/global.h:4:0,
                 from ./include/base.h:40,
                 from ./src/device.c:1:
./include/queue.h:30:15: note: expected ‘unsigned char *’ but argument is of type ‘char *’
 unsigned char en_queue(QUEUE *pQueue,unsigned char *ucpData,unsigned int uiSize,unsigned char ucType);
               ^
./src/device.c:489:10: warning: unused variable ‘cmd’ [-Wunused-variable]
     char cmd[MAX_BUFLEN] = {0};
          ^
./src/device.c: In function ‘install_programe’:
./src/device.c:558:28: warning: pointer targets in passing argument 1 of ‘strlen’ differ in signedness [-Wpointer-sign]
  if(conf.http_ip && strlen(conf.http_ip) != 0)
                            ^
In file included from /usr/include/memory.h:29:0,
                 from ./include/base.h:14,
                 from ./src/device.c:1:
/usr/include/string.h:394:15: note: expected ‘const char *’ but argument is of type ‘unsigned char *’
 extern size_t strlen (const char *__s)
               ^
./src/device.c:575:4: warning: implicit declaration of function ‘save_config’ [-Wimplicit-function-declaration]
    save_config();
    ^
./src/device.c:597:99: warning: pointer targets in passing argument 1 of ‘device_partition’ differ in signedness [-Wpointer-sign]
      sprintf(cmd, install_sh, dev_info.mini_disk->name, dev_info.usb_disk->name, device_partition(dev_info.usb_disk->name));
                                                                                                   ^
./src/device.c:19:5: note: expected ‘const char *’ but argument is of type ‘unsigned char *’
 int device_partition (const char *dev)
     ^
./src/device.c:532:6: warning: unused variable ‘ret’ [-Wunused-variable]
  int ret;
      ^
./src/device.c:531:22: warning: unused variable ‘server’ [-Wunused-variable]
  struct server_info *server = &(conf.server);
                      ^
./src/device.c: In function ‘upgrad_programe’:
./src/device.c:522:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [device.o] Error 1
